--- a/BDMatchUI/MatchSettingsPage.xaml
+++ b/BDMatchUI/MatchSettingsPage.xaml
@@ -29,63 +29,73 @@
                     <RowDefinition Height="1*"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock x:Name="MatchSettingsText" x:Uid="BDMatchUI/MatchSettingsPage/MatchSettingsText" Grid.Row="0" Grid.Column="0" FontSize="40" Margin="25, 10, 20, 10" TextWrapping="WrapWholeWords" />
+                <TextBlock x:Name="MatchSettingsText" x:Uid="BDMatchUI/MatchSettingsPage/MatchSettingsText" Text="{x:Bind text_helper.MatchSettingsText, Mode=OneWay}" Grid.Row="0" Grid.Column="0" FontSize="40" Margin="25, 10, 20, 10" TextWrapping="WrapWholeWords" />
                 
                 <StackPanel Grid.Row="2" Grid.Column="0" Margin="5,5,5,5" HorizontalAlignment="Stretch" VerticalAlignment="Center">
                     <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Center" Orientation="Horizontal">
-                        <TextBlock x:Name="MatchEnText" x:Uid="BDMatchUI/MatchSettingsPage/MatchEnText" Margin="20,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" TextWrapping="WrapWholeWords"/>
-                        <ToggleSwitch AutomationProperties.Name="simple ToggleSwitch" x:Name="MatchEn" x:Uid="BDMatchUI/MatchSettingsPage/MatchEn" Margin="3,3,0,0" VerticalAlignment="Center" HorizontalAlignment="Left"
-                                      Toggled="MatchEn_Toggled" FontSize="15"/>
+                        <TextBlock x:Name="MatchEnText" x:Uid="BDMatchUI/MatchSettingsPage/MatchEnText" Text="{x:Bind text_helper.MatchEnText, Mode=OneWay}"
+                                   Margin="20,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" TextWrapping="WrapWholeWords"/>
+                        <ToggleSwitch AutomationProperties.Name="simple ToggleSwitch" x:Name="MatchEn" x:Uid="BDMatchUI/MatchSettingsPage/MatchEn" OnContent="{x:Bind text_helper.OnText, Mode=OneWay}" OffContent="{x:Bind text_helper.OffText, Mode=OneWay}"
+                                      Margin="3,3,0,0" VerticalAlignment="Center" HorizontalAlignment="Left" Toggled="MatchEn_Toggled" FontSize="15"/>
                     </StackPanel>
-                    <TextBlock x:Name="MatchEnElbr" x:Uid="BDMatchUI/MatchSettingsPage/MatchEnElbr" Margin="60,10,5,0" VerticalAlignment="Center" FontSize="15" TextWrapping="WrapWholeWords"/>
+                    <TextBlock x:Name="MatchEnElbr" x:Uid="BDMatchUI/MatchSettingsPage/MatchEnElbr" Text="{x:Bind text_helper.MatchEnElbr, Mode=OneWay}" Margin="60,10,5,0" VerticalAlignment="Center" FontSize="15" TextWrapping="WrapWholeWords"/>
                 </StackPanel>
                 
                 <StackPanel Grid.Row="3" Grid.Column="0" Margin="5,20,5,5" HorizontalAlignment="Stretch" VerticalAlignment="Center">
                     <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Center" Orientation="Horizontal">
-                        <TextBlock x:Name="SearchRangeText" x:Uid="BDMatchUI/MatchSettingsPage/SearchRangeText" Grid.Row="0" Grid.Column="0" Margin="20,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" TextWrapping="WrapWholeWords"/>
+                        <TextBlock x:Name="SearchRangeText" x:Uid="BDMatchUI/MatchSettingsPage/SearchRangeText" Text="{x:Bind text_helper.SearchRangeText, Mode=OneWay}"
+                                   Grid.Row="0" Grid.Column="0" Margin="20,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" TextWrapping="WrapWholeWords"/>
                         <NumberBox x:Name="SearchRange" SpinButtonPlacementMode="Inline" Grid.Row="0" Grid.Column="1" Minimum="1" Maximum="2147483647" SmallChange="1" LargeChange="10" Margin="10,0,10,0" FontSize="18" HorizontalAlignment="Stretch"
                                    ValueChanged="SearchRange_ValueChanged"/>
-                        <TextBlock x:Name="SecText" x:Uid="BDMatchUI/MatchSettingsPage/SecText" Grid.Row="0" Grid.Column="2" Margin="0,0,5,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" TextWrapping="WrapWholeWords"/>
+                        <TextBlock x:Name="SecText" x:Uid="BDMatchUI/MatchSettingsPage/SecText" Text="{x:Bind text_helper.SecText, Mode=OneWay}"
+                                   Grid.Row="0" Grid.Column="2" Margin="0,0,5,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" TextWrapping="WrapWholeWords"/>
                     </StackPanel>
-                    <TextBlock x:Name="SearchRangeElbr" x:Uid="BDMatchUI/MatchSettingsPage/SearchRangeElbr" Margin="60,10,5,0" VerticalAlignment="Center" FontSize="15" TextWrapping="WrapWholeWords"/>
+                    <TextBlock x:Name="SearchRangeElbr" x:Uid="BDMatchUI/MatchSettingsPage/SearchRangeElbr" Text="{x:Bind text_helper.SearchRangeElbr, Mode=OneWay}" Margin="60,10,5,0" VerticalAlignment="Center" FontSize="15" TextWrapping="WrapWholeWords"/>
                 </StackPanel>
                 
                 <StackPanel Grid.Row="4" Grid.Column="0" Margin="5,20,5,5" HorizontalAlignment="Stretch" VerticalAlignment="Center">
                     <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Center" Orientation="Horizontal">
-                        <TextBlock x:Name="MaxLengthText" x:Uid="BDMatchUI/MatchSettingsPage/MaxLengthText" Grid.Row="0" Grid.Column="0" Margin="20,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" TextWrapping="WrapWholeWords"/>
+                        <TextBlock x:Name="MaxLengthText" x:Uid="BDMatchUI/MatchSettingsPage/MaxLengthText" Text="{x:Bind text_helper.MaxLengthText, Mode=OneWay}" 
+                                   Grid.Row="0" Grid.Column="0" Margin="20,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" TextWrapping="WrapWholeWords"/>
                         <NumberBox x:Name="MaxLength" SpinButtonPlacementMode="Inline" Grid.Row="0" Grid.Column="1" Minimum="1" Maximum="2147483647" SmallChange="1" LargeChange="10" Margin="10,0,10,0" FontSize="18" HorizontalAlignment="Stretch"
                                    ValueChanged="MaxLength_ValueChanged"/>
-                        <TextBlock x:Name="SecText2" x:Uid="BDMatchUI/MatchSettingsPage/SecText" Grid.Row="0" Grid.Column="2" Margin="0,0,5,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" TextWrapping="WrapWholeWords"/>
+                        <TextBlock x:Name="SecText2" x:Uid="BDMatchUI/MatchSettingsPage/SecText" Text="{x:Bind text_helper.SecText, Mode=OneWay}"
+                                   Grid.Row="0" Grid.Column="2" Margin="0,0,5,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" TextWrapping="WrapWholeWords"/>
                     </StackPanel>
-                    <TextBlock x:Name="MaxLengthElbr" x:Uid="BDMatchUI/MatchSettingsPage/MaxLengthElbr" Margin="60,10,5,0" VerticalAlignment="Center" FontSize="15" TextWrapping="WrapWholeWords"/>
+                    <TextBlock x:Name="MaxLengthElbr" x:Uid="BDMatchUI/MatchSettingsPage/MaxLengthElbr" Text="{x:Bind text_helper.MaxLengthElbr, Mode=OneWay}"
+                               Margin="60,10,5,0" VerticalAlignment="Center" FontSize="15" TextWrapping="WrapWholeWords"/>
                 </StackPanel>
                 
                 <StackPanel Grid.Row="5" Grid.Column="0" Margin="5,20,5,5" HorizontalAlignment="Stretch" VerticalAlignment="Center">
                     <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Center" Orientation="Horizontal">
-                        <TextBlock x:Name="MinCnfrmNumText" x:Uid="BDMatchUI/MatchSettingsPage/MinCnfrmNumText" Grid.Row="0" Grid.Column="0" Margin="20,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" TextWrapping="WrapWholeWords"/>
+                        <TextBlock x:Name="MinCnfrmNumText" x:Uid="BDMatchUI/MatchSettingsPage/MinCnfrmNumText" Text="{x:Bind text_helper.MinCnfrmNumText, Mode=OneWay}"
+                                   Grid.Row="0" Grid.Column="0" Margin="20,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" TextWrapping="WrapWholeWords"/>
                         <NumberBox x:Name="MinCnfrmNum" SpinButtonPlacementMode="Inline" Grid.Row="0" Grid.Column="1" Minimum="10" Maximum="2147483647" SmallChange="1" LargeChange="10" Margin="10,0,10,0" FontSize="18" HorizontalAlignment="Stretch"
                                    ValueChanged="MinCnfrmNum_ValueChanged"/>
                     </StackPanel>
-                    <TextBlock x:Name="MinCnfrmNumElbr" x:Uid="BDMatchUI/MatchSettingsPage/MinCnfrmNumElbr" Margin="60,10,5,0" VerticalAlignment="Center" FontSize="15" TextWrapping="WrapWholeWords"/>
+                    <TextBlock x:Name="MinCnfrmNumElbr" x:Uid="BDMatchUI/MatchSettingsPage/MinCnfrmNumElbr" Text="{x:Bind text_helper.MinCnfrmNumElbr, Mode=OneWay}" Margin="60,10,5,0" VerticalAlignment="Center" FontSize="15" TextWrapping="WrapWholeWords"/>
                 </StackPanel>
                 
                 <StackPanel Grid.Row="6" Grid.Column="0" Margin="5,20,5,5" HorizontalAlignment="Stretch" VerticalAlignment="Center">
                     <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Center" Orientation="Horizontal">
-                        <TextBlock x:Name="SubOffsetText" x:Uid="BDMatchUI/MatchSettingsPage/SubOffsetText" Grid.Row="0" Grid.Column="0" Margin="20,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" TextWrapping="WrapWholeWords"/>
+                        <TextBlock x:Name="SubOffsetText" x:Uid="BDMatchUI/MatchSettingsPage/SubOffsetText" Text="{x:Bind text_helper.SubOffsetText, Mode=OneWay}" 
+                                   Grid.Row="0" Grid.Column="0" Margin="20,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" TextWrapping="WrapWholeWords"/>
                         <NumberBox x:Name="SubOffset" SpinButtonPlacementMode="Inline" Grid.Row="0" Grid.Column="1" Minimum="-2147483648" Maximum="2147483647" SmallChange="1" LargeChange="10" Margin="10,0,10,0" FontSize="18" HorizontalAlignment="Stretch"
                                    ValueChanged="SubOffset_ValueChanged"/>
-                        <TextBlock x:Name="CentiSecText" x:Uid="BDMatchUI/MatchSettingsPage/CentiSecText" Grid.Row="0" Grid.Column="2" Margin="0,0,5,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" TextWrapping="WrapWholeWords"/>
+                        <TextBlock x:Name="CentiSecText" x:Uid="BDMatchUI/MatchSettingsPage/CentiSecText" Text="{x:Bind text_helper.CentiSecText, Mode=OneWay}" 
+                                   Grid.Row="0" Grid.Column="2" Margin="0,0,5,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" TextWrapping="WrapWholeWords"/>
                     </StackPanel>
-                    <TextBlock x:Name="SubOffsetElbr" x:Uid="BDMatchUI/MatchSettingsPage/SubOffsetElbr" Margin="60,10,5,0" VerticalAlignment="Center" FontSize="15" TextWrapping="WrapWholeWords"/>
+                    <TextBlock x:Name="SubOffsetElbr" x:Uid="BDMatchUI/MatchSettingsPage/SubOffsetElbr" Text="{x:Bind text_helper.SubOffsetElbr, Mode=OneWay}" Margin="60,10,5,0" VerticalAlignment="Center" FontSize="15" TextWrapping="WrapWholeWords"/>
                 </StackPanel>
                 
                 <StackPanel Grid.Row="7" Grid.Column="0" Margin="5,5,5,5" HorizontalAlignment="Stretch" VerticalAlignment="Center">
                     <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Center" Orientation="Horizontal">
-                        <TextBlock x:Name="FastMatchText" x:Uid="BDMatchUI/MatchSettingsPage/FastMatchText" Margin="20,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" TextWrapping="WrapWholeWords"/>
-                        <ToggleSwitch AutomationProperties.Name="simple ToggleSwitch" x:Name="FastMatch" x:Uid="BDMatchUI/MatchSettingsPage/FastMatch" Margin="3,3,0,0" VerticalAlignment="Center" HorizontalAlignment="Left"
-                                      Toggled="FastMatch_Toggled" FontSize="15"/>
+                        <TextBlock x:Name="FastMatchText" x:Uid="BDMatchUI/MatchSettingsPage/FastMatchText" Text="{x:Bind text_helper.FastMatchText, Mode=OneWay}" 
+                                   Margin="20,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" TextWrapping="WrapWholeWords"/>
+                        <ToggleSwitch AutomationProperties.Name="simple ToggleSwitch" x:Name="FastMatch" x:Uid="BDMatchUI/MatchSettingsPage/FastMatch" OnContent="{x:Bind text_helper.OnText, Mode=OneWay}" OffContent="{x:Bind text_helper.OffText, Mode=OneWay}"
+                                      Margin="3,3,0,0" VerticalAlignment="Center" HorizontalAlignment="Left" Toggled="FastMatch_Toggled" FontSize="15"/>
                     </StackPanel>
-                    <TextBlock x:Name="FastMatchElbr" x:Uid="BDMatchUI/MatchSettingsPage/FastMatchElbr" Margin="60,10,5,0" VerticalAlignment="Center" FontSize="15" TextWrapping="WrapWholeWords"/>
+                    <TextBlock x:Name="FastMatchElbr" x:Uid="BDMatchUI/MatchSettingsPage/FastMatchElbr" Text="{x:Bind text_helper.FastMatchElbr, Mode=OneWay}" Margin="60,10,5,0" VerticalAlignment="Center" FontSize="15" TextWrapping="WrapWholeWords"/>
                 </StackPanel>
             </Grid>
         </ScrollViewer>
